<resources>
    <string name="app_name">Loan Calc</string>
    <string name="loan_sum">Сумма кредита</string>
    <string name="loan_term">Срок кредита, мес</string>
    <string name="loan_rate">Ставка по кредиту, %</string>
    <string name="loan_commission">Комиссия кредита, %</string>
    <string name="loan_cashing_out">Обналичивание, %</string>
    <string name="loan_tax">Налоги, %</string>
    <string name="button_clear">Очистить</string>
    <string name="button_calculate">Рассчитать</string>
    <string name="button_schedule">График</string>
    <string name="output_payment">Аннуитетный взнос</string>
    <string name="output_refundable_amount">Сумма к возврату</string>
    <string name="output_effective_interest_rate">Эффективная процентная ставка</string>
    <string name="zero_text">0</string>
</resources>
